--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 
   <title>Bootstrap-Portfolio</title>
 
-  <!-- Custom fonts for this theme -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
@@ -58,17 +54,18 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
+      <h2 class="page-section-heading text-left text-uppercase text-white">About Me</h2>
 
       <!-- About Section Content -->
       <div class="row">
-        <img src="assets/images/4_July_2019.JPG" class="auth-image" alt= "bio-image">
-        <div class="col-lg-4 ml-auto">
-          <p class="lead">It is not the critic who counts: not the man who points out how the strong man stumbles or where the doer of deeds could have done better. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood, who strives valiantly, who errs and comes up short again and again,</p>
+        <div class="col-lg-6 ml-auto">
+        <img src="images/4_July_2019.JPG" class="auth-image" alt= "bio-image">
         </div>
-
+        <div class="col-lg-6 ml-auto">
+        <p class="lead">It is not the critic who counts: not the man who points out how the strong man stumbles or where the doer of deeds could have done better. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood, who strives valiantly, who errs and comes up short again and again,</p>
+        </div>
       <div class="row"></div>
-        <div class="col-lg-4 mr-auto">
+        <div class="col-lg-12 mr-auto">
           <p class="lead">[B]ecause there is no effort without error or shortcoming, but who knows the great enthusiasms, the great devotions, who spends himself for a worthy cause; who, at the best, knows, in the end, the triumph of high achievement, and who, at the worst, if he fails, at least he fails while daring greatly, so that his place shall never be with those cold and timid souls who knew neither victory nor defeat.</p>
         </div>
       </div>
@@ -83,7 +80,7 @@
     <div class="container">
 
       <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+      <h2 class="page-section-heading text-left text-uppercase text-secondary mb-0">Portfolio</h2>
 
 
 
@@ -91,37 +88,37 @@
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
-          <img src="assets/images/IMG_2418.JPG" class="auth-image" id= "Hangman">
+        <div class="col-lg-6">
+          <img src="images/IMG_2418.JPG" class="auth-image" id= "Hangman">
           <h3> Hangman</h3>
         </div>
 
         <!-- Portfolio Item 2 -->
-        <div class="col-md-6 col-lg-4">
-          <img src="assets/images/IMG_2414.JPG" class="auth-image" id= "RPG Game">
+        <div class="col-lg-6">
+          <img src="images/IMG_2414.JPG" class="auth-image" id= "RPG Game">
           <h3> RPG Game</h3>   
         </div>
         
-        <div class="row">
+      <div class="row">
         <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
-            <img src="assets/images/IMG_2421.JPG" class="auth-image"id= "bio-image">
+        <div class="col-lg-6">
+            <img src="images/IMG_2421.JPG" class="auth-image"id= "bio-image">
             <h3> Trivia Game</h3>
           </div>
 
 
         <!-- Portfolio Item 4 -->
-        <div class="col-md-6 col-lg-4">
-          <img src="assets/images/IMG_2441.JPG" class="auth-image" id= "Rutgers Info Widget">
+        <div class="col-lg-6">
+          <img src="images/IMG_2441.JPG" class="auth-image" id= "Rutgers Info Widget">
           <h3> Rutgers Info Widget</h3>    
         </div>
 
-        <div class="row">
+      <div class="row">
         <!-- Portfolio Item 5 -->
-        <div class="col-md-6 col-lg-4">
-        <img src="assets/images/IMG_2433.JPG" class="auth-image" id= "Rock Paper Scissors">
+        <div class="col-lg-12">
+        <img src="images/IMG_2433.JPG" class="auth-image" id= "Rock Paper Scissors">
         <h3> Rock Paper Scissors</h3>      
-    </div>
+      </div>
   </section>
 
 
@@ -131,7 +128,7 @@
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact</h2>
+      <h2 class="page-section-heading text- text-uppercase text-secondary mb-0">Contact</h2>
 
 
       <!-- Contact Section Form -->
@@ -173,7 +170,7 @@
   </section>
 
   
-
+/*
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
@@ -202,7 +199,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
-
+*/
 </body>
 
 </html>
